--- a/package.json
+++ b/package.json
@@ -17,16 +17,21 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@types/cors": "^2.8.17",
         "@types/css-modules": "^1.0.5",
+        "@types/node": "^22.13.1",
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
+        "cors": "^2.8.5",
         "eslint": "^9.19.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.18",
+        "express": "^4.21.2",
         "globals": "^15.14.0",
         "typescript": "~5.7.2",
         "typescript-eslint": "^8.22.0",
-        "vite": "^6.1.0"
+        "vite": "^6.1.0",
+        "vite-plugin-svgr": "^4.3.0"
     }
 }
