--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bcrypt": "^5.1.1",
 		"child_process": "^1.0.2",
 		"cookie-parser": "^1.4.7",
+		"js-cookie": "^3.0.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.1.5",
@@ -26,6 +27,7 @@
 		"@types/cors": "^2.8.17",
 		"@types/css-modules": "^1.0.5",
 		"@types/express": "^5.0.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^22.13.1",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
