--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-router-dom": "^7.1.5",
-		"uuid": "^11.1.0"
+		"uuid": "^11.1.0",
+		"zod": "^3.24.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
