--- a/package.json
+++ b/package.json
@@ -11,33 +11,25 @@
 		"deploy": "sudo ./deployReact.sh -k ~/.ssh/cs260-startup-logan.pem -h demodel.click -s startup"
 	},
 	"dependencies": {
-		"bcrypt": "^5.1.1",
-		"child_process": "^1.0.2",
 		"cookie-parser": "^1.4.7",
 		"js-cookie": "^3.0.5",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-router-dom": "^7.1.5",
-		"uuid": "^11.1.0",
-		"zod": "^3.24.2"
+		"react-router-dom": "^7.1.5"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
-		"@types/bcrypt": "^5.0.2",
 		"@types/cookie-parser": "^1.4.8",
 		"@types/cors": "^2.8.17",
 		"@types/css-modules": "^1.0.5",
-		"@types/express": "^5.0.0",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^22.13.1",
 		"@types/react": "^19.0.8",
 		"@types/react-dom": "^19.0.3",
 		"@vitejs/plugin-react": "^4.3.4",
-		"cors": "^2.8.5",
 		"eslint": "^9.19.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.18",
-		"express": "^4.21.2",
 		"globals": "^15.14.0",
 		"typescript": "~5.7.2",
 		"typescript-eslint": "^8.22.0",
