--- a/service/package.json
+++ b/service/package.json
@@ -9,14 +9,16 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"type": "commonjs",
+	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
 		"child_process": "^1.0.2",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
 		"express": "^4.21.2",
-		"mongodb": "^6.14.2",
 		"uuid": "^11.1.0"
+	},
+	"devDependencies": {
+		"@types/bcrypt": "^5.0.2"
 	}
 }
